--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -102,4 +102,65 @@
     animation: slowFadeInOut 5s ease-in-out forwards;
   }
   
+
+
+  /* App.css */
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8); /* Slight opacity for overlay effect */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; /* Ensure it overlays other elements */
+}
+
+
+.loader-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-bar {
+  width: 300px; /* Adjust width as needed */
+  height: 20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.progress {
+  height: 100%;
+  width: 0;
+  background: linear-gradient(90deg, #ff6a00, #ff00ff); /* Gradient colors */
+  border-radius: 10px;
+  transition: width 0.4s ease;
+}
+
+.loading-text {
+  margin-top: 10px;
+  font-family: 'Arial', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #f91121;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
+
   
