--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -138,18 +138,24 @@
 
 .progress {
   height: 100%;
-  width: 0;
   background: linear-gradient(90deg, #ff6a00, #ff00ff); /* Gradient colors */
   border-radius: 10px;
   transition: width 0.4s ease;
 }
 
-.loading-text {
+/* .loading-textcontent {
   margin-top: 10px;
   font-family: 'Arial', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  color: #f91121;
+  color: #4ba3da;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  animation: pulse 1s infinite;
+} */
+
+.loading-text {
+  margin-top: 10px;
+  font-family: 'Arial', sans-serif;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   animation: pulse 1s infinite;
 }
