--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -138,20 +138,11 @@
 
 .progress {
   height: 100%;
-  background: linear-gradient(90deg, #e8ce50, #ee0c57); /* Gradient colors */
+  background: linear-gradient(90deg, #e8ce50, #ee0c57); 
   border-radius: 10px;
   transition: width 0.4s ease;
 }
 
-/* .loading-textcontent {
-  margin-top: 10px;
-  font-family: 'Arial', sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #4ba3da;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  animation: pulse 1s infinite;
-} */
 
 .loading-text {
   margin-top: 10px;
@@ -159,6 +150,45 @@
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
   animation: pulse 1s infinite;
 }
+
+
+.progress-meter-container {
+  width: 100%;
+  max-width: 400px; 
+  background-color: transparent; 
+  border-radius: 8px; 
+  position: relative;
+  margin: 20px auto;
+}
+
+.progress-meter-container {
+  width: 100%; 
+  max-width: 400px; 
+  background-color: #ffffff; 
+  border-radius: 5px; 
+  position: relative;
+  margin: 20px auto;
+  border: 1px solid white; 
+  height: 5px; 
+  min-width: 100%; 
+}
+
+.invisible-dots {
+  visibility: hidden; 
+  height: 10px; 
+}
+
+.progress-bar {
+  height: 100%; 
+  background-color: #ec635b; 
+  width: 0%; 
+  border-radius: 5px; 
+  transition: width 0.1s ease-in-out; 
+}
+
+
+
+
 
 @keyframes pulse {
   0%, 100% {
