--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -199,4 +199,18 @@
   }
 }
 
-  
+.blinking {
+  animation: blink-animation 1s infinite;
+}
+
+@keyframes blink-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
